--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=gestao-produtos
+
+# Configurações do Banco H2 (Em memória)
+spring.datasource.url=jdbc:h2:mem:gestaoprodutosdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Habilita o console do H2 no navegador
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Mostra o SQL gerado no log (ótimo para aprender como o JPA traduz as coisas)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
